# grf

./: .gitignore  .travis.yml  404.html  AUTHORS.md  CHANGELOG  CHANGELOG.html  CHANGELOG.md  DESCRIPTION  DEVELOPING.html  DEVELOPING.md  NEWS.md  NOTICE.md  README  README.md  README.txt  REFERENCE.html  REFERENCE.md  TODO  authors.html  azure-pipelines.yml  extra.js  index.html  pkgdown.yml  result.txt  results.pptx  sitemap.xml
core/: .gitignore  BUILD.md  CMakeCache.txt  CMakeLists.txt  Makefile  build.bat  build.sh  cmake_install.cmake  config.mk  grf.cbp  setup_dirs.bat  setup_dirs.sh
core/bayesopt/: .hgignore  .hgtags  BayesOpt.cbp  CMakeLists.txt  Doxyfile.in  Makefile  README.md  cmake_install.cmake  exportlocalpaths.sh  index.html  install_manifest.txt  optimization.bib  params.json  readme_kk.txt
core/bayesopt/cmake/: FindNumpy.cmake  FindPython.cmake  PythonMagic.cmake  UseDoxygen.cmake
core/bayesopt/doxygen/: contribute.dox  demos.dox  install.dox  models.dox  reference.dox  related.dox  using.dox
core/bayesopt/examples/: CMakeLists_1.txt  Makefile  bo_branin.cpp  bo_branin_display.cpp  bo_branin_mcmc.cpp  bo_branin_timed.cpp  bo_camelback.cpp  bo_compare.cpp  bo_cont.cpp  bo_disc.cpp  bo_display.cpp  bo_hartmann.cpp  bo_oned.cpp  branin_system_calls.cpp  branin_xml.cpp  cmake_install.cmake  test.cpp
core/bayesopt/include/: bopt_state.hpp  conditionalbayesprocess.hpp  criteria_functors.hpp  dataset.hpp  dll_stuff.h  gauss_distribution.hpp  gaussian_process.hpp  gaussian_process_hierarchical.hpp  gaussian_process_ml.hpp  gaussian_process_normal.hpp  inneroptimization.hpp  kernel_functors.hpp  kernelregressor.hpp  mcmc_sampler.hpp  mean_atomic.hpp  mean_combined.hpp  mean_functors.hpp  nonparametricprocess.hpp  optimizable.hpp  posterior_empirical.hpp  posterior_fixed.hpp  posterior_mcmc.hpp  posteriormodel.hpp  prob_distribution.hpp  randgen.hpp  specialtypes.hpp  student_t_distribution.hpp  student_t_process_jef.hpp  student_t_process_nig.hpp
core/bayesopt/matplotpp/: README  gl2ps.c  matplotpp.cc  matplotpp.h
core/bayesopt/nlopt2/: CMakeLists.txt  Makefile  Makefile.in  aclocal.m4  cmake_install.cmake  config.h  config.h.in  configure
core/bayesopt/sobol/: sobol.cpp  sobol.hpp  sobol_i4.cpp  sobol_i8.cpp
core/bayesopt/src/: bayesoptbase.cpp  bayesoptcont.cpp  bayesoptdisc.cpp  bopt_state.cpp  conditionalbayesprocess.cpp  criteria_functors.cpp  criteria_hedge.cpp  dataset.cpp  gauss_distribution.cpp  gaussian_process.cpp  gaussian_process_hierarchical.cpp  gaussian_process_ml.cpp  gaussian_process_normal.cpp  inneroptimization.cpp  kernel_functors.cpp  kernelregressor.cpp  mcmc_sampler.cpp  mean_functors.cpp  nonparametricprocess.cpp  parameters.cpp  posterior_empirical.cpp  posterior_fixed.cpp  posterior_mcmc.cpp  posteriormodel.cpp  student_t_distribution.cpp  student_t_process_jef.cpp  student_t_process_nig.cpp
core/bayesopt/tests/: CMakeLists.txt  test_fileparser.cpp  test_initial_samples.cpp  test_restore.cpp  test_save.cpp  testchol.cpp  testgrid.cpp  testmcmc.cpp  testnlopt.cpp  testparser.cpp  testrand.cpp
core/bayesopt/utils/: boundingbox.hpp  displaygp.cpp  displaygp.hpp  fileparser.cpp  fileparser.hpp  gridsampling.hpp  indexvector.hpp  lhs.hpp  log.hpp  param_loader.cpp  param_loader.hpp  parser.cpp  parser.hpp  testfunctions.hpp  ublas_cholesky.hpp  ublas_elementwise.hpp  ublas_extra.cpp  ublas_extra.hpp  ublas_trace.hpp
core/bayesopt_inl/: bayesopt.h  bayesoptbase.hpp  parameters.h
core/src/: RuntimeContext.cpp  RuntimeContext.h  globals.h  main.cpp
core/src/Forest/: Forest.cpp  Forest.h  ForestModel.cpp  ForestModel.h
core/src/Tree/: Tree.cpp  Tree.h  TreeModel.cpp  TreeModel.h
core/src/analysis/: SplitFrequencyComputer.cpp  SplitFrequencyComputer.h
core/src/commons/: ArgumentHandler.cpp  Data.cpp  Data.h  DefaultData.cpp  DefaultData.h  Observations.cpp  Observations.h  ProgressBar.cpp  ProgressBar.h  SparseData.cpp  SparseData.h  globals.h  utility.cpp  utility.h
core/src/forest/: BayesoptSrc.cpp  BayesoptSrc.h  Forest.cpp  Forest.h  ForestOptions.cpp  ForestOptions.h  ForestPredictor.cpp  ForestPredictor.h  ForestPredictors.cpp  ForestPredictors.h  ForestTrainer.cpp  ForestTrainer.h  ForestTrainers.cpp  ForestTrainers.h
core/src/prediction/: CausalPredictionStrategy.cpp  CausalPredictionStrategy.h  CausalSurvivalPredictionStrategy.cpp  CausalSurvivalPredictionStrategy.h  CustomPredictionStrategy.cpp  CustomPredictionStrategy.h  DefaultPredictionStrategy.h  InstrumentalPredictionStrategy.cpp  InstrumentalPredictionStrategy.h  LLCausalPredictionStrategy.cpp  LLCausalPredictionStrategy.h  LocalLinearPredictionStrategy.cpp  LocalLinearPredictionStrategy.h  MultiCausalPredictionStrategy.cpp  MultiCausalPredictionStrategy.h  MultiRegressionPredictionStrategy.cpp  MultiRegressionPredictionStrategy.h  ObjectiveBayesDebiaser.cpp  ObjectiveBayesDebiaser.h  OptimizedPredictionStrategy.h  Prediction.cpp  Prediction.h  PredictionStrategy.h  PredictionValues.cpp  PredictionValues.h  ProbabilityPredictionStrategy.cpp  ProbabilityPredictionStrategy.h  QuantilePredictionStrategy.cpp  QuantilePredictionStrategy.h  RegressionPredictionStrategy.cpp  RegressionPredictionStrategy.h  SurvivalPredictionStrategy.cpp  SurvivalPredictionStrategy.h
core/src/relabeling/: CausalRelabelingStrategy.cpp  CausalRelabelingStrategy.h  CausalSurvivalRelabelingStrategy.cpp  CausalSurvivalRelabelingStrategy.h  CustomRelabelingStrategy.cpp  CustomRelabelingStrategy.h  RelabelingStrategy.h  (+14 more)
core/test/: catch.hpp
python/: pyproject.toml  requirements.txt  setup.py
python/grf/: PyUtilities.cpp  PyUtilities.h  __init__.py  _grf_python.cpp  regression.py
python/notebooks/: scratch.ipynb
source/: .cproject  .gitignore  .project  CMakeLists.txt
source/src/: globals.h  main.cpp  version.h
test/: .gitignore  .project  CMakeLists.txt  README.md  benchmark_r.R  compare_survival.R  profile_survival.R  test_all.cpp  test_classification.R  test_mse.R  test_probability.R  test_r.R  test_regression.R  test_survival.R  utility_test.cpp
test/silke/: silke.R
(+1290 files in other folders)
